--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,28 @@
-/* You can add global styles to this file, and also import other style files */
+@import url("https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap");
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+* {
+  font-family: "Plus Jakarta Sans", sans-serif;
+}
+
+.dark {
+  background: #20212c;
+  --color-bg: #20212c;
+  --color-scroll: #3e3f4e;
+  --color-borderLine: #3e3f4e;
+  --color-main: #2b2c37;
+  --color-title: #ffffff;
+  --color-subTitle: #ffffff;
+  --color-board: #20212c;
+  --color-themeSwitchBox: #20212c;
+  --color-addButton: #ffffff;
+  --color-ellipsis: #20212c;
+  --color-checked: rgba(255, 255, 255, 0.5);
+}
+
+.light {
+  background: #f4f7fd;
+}
