--- a/src/app/View/components/header/header.component.html
+++ b/src/app/View/components/header/header.component.html
@@ -1,13 +1,13 @@
-<div class="header p-9 lg:ml-5 lg:p-4 lg:pt-9 flex">
+<div class="header fixed z-10 w-full p-9 bg-[#2b2c37]  lg:px-8 lg:p-0 flex border-b-[1px] border-b-[#3e3f4e] divide-x-[1.5px] divide-[#3e3f4e]">
     <img src="../../../../assets/logo-mobile.svg" alt="" class="lg:hidden" />
     <img
       src="../../../../assets/logo-light.svg"
       alt=""
-      class="hidden lg:block h-6 mr-16"
+      class="hidden lg:block h-6 mr-0 pr-32 mt-8 mb-5"
     />
 
-    <div class="launch">
-        <div class="drop-down ml-5">
+    <div class="launch pl-8 flex w-full lg:pt-8 lg:pb-5">
+        <div class="drop-down ml-5 lg:ml-0">
       <div class="drop-head flex">
         <p class="text-white font-bold lg:text-2xl text-xl">Platform Launch</p>
         <img
@@ -18,12 +18,12 @@
       </div>
     </div>
 
-    </div>
+   
 
     
     <div class="left-btn flex ml-auto gap-3 lg:gap-4">
-      <div
-        class="add-btn flex p-2 lg:py-3 lg:rounded-full rounded-xl px-4 bg-[#635FC7]"
+      <button
+        class="add-btn flex p-2 lg:py-3 lg:rounded-full rounded-xl px-4 bg-[#635FC7] hover:opacity-60"
       >
         <img
           src="../../../../assets/icon-add-task-mobile.svg"
@@ -31,7 +31,7 @@
           class="lg:h-2 lg:mt-2 lg:mr-1"
         />
         <p class="text-white text-sm hidden lg:block font-bold">Add New Task</p>
-      </div>
+      </button>
 
       <img
         src="../../../../assets/icon-vertical-ellipsis.svg"
@@ -39,4 +39,5 @@
         class="h-4 lg:h-5 lg:mt-4 mt-1.5"
       />
     </div>
+     </div>
   </div>
