feat/sidebar toggling functionality

--- a/src/app/View/components/dashboard-frame/dashboard-frame.component.html
+++ b/src/app/View/components/dashboard-frame/dashboard-frame.component.html
@@ -2,6 +2,8 @@
  
    <app-header/>
 
-   <app-sidebar/>
+   <app-sidebar [ngClass]="{'invisible':showsidebarservice.isSidebarShown}"/>
+
+   <app-show-sidebar (click)="showsidebarservice.toggleSidebar()" [ngClass]="{ 'invisible ':!showsidebarservice.isSidebarShown}" />
 
 </main>
