--- a/src/app/View/components/sidebar/sidebar.component.html
+++ b/src/app/View/components/sidebar/sidebar.component.html
@@ -1,5 +1,5 @@
 <main
-  class="hidden pt-28 bg-[#2b2c37] lg:block h-full fixed w-[303px] mr-0 border-r text-slate-400 border-r-[#3e3f4e]"
+  class=" lg:pt-28 pt-3 top-20 lg:top-0 border border-[#3e3f4e] lg:border-l-0 lg:border-b-0 bg-[#2b2c37] absolute z-20 lg:z-0 lg:rounded-none lg:left-0 rounded-lg left-36 lg:h-full lg:fixed w-[303px] mr-0 text-slate-400 border-r-[#3e3f4e]"
 >
   <p
     class="text-slate-400 pl-7 font-bold uppercase text-[0.75rem] tracking-[0.1rem]"
