--- a/src/app/View/components/theme-toggle/theme-toggle.component.html
+++ b/src/app/View/components/theme-toggle/theme-toggle.component.html
@@ -1,4 +1,4 @@
-<div class="below-div absolute w-[220px] mx-8 bottom-8">
+<div class="below-div pb-8 mt-3 lg:mt-0 lg:pb-0 lg:absolute w-[220px] mx-8 bottom-8">
     <div class="theme-toggle flex gap-6 p-2.5 px-10 rounded-lg  bg-[#20212c] ">
     <img src="../../../../assets/icon-dark-theme.svg" alt="" class="h-5 mt-1">
 
@@ -10,9 +10,11 @@
     <img src="../../../../assets/icon-light-theme.svg" alt="" class="ml-auto h-5 mt-1 ">
 
   </div>
-
-  <div class="hide mt-4 ml-3 flex gap-4 hover:opacity-60 cursor-pointer">
+<button (click)="hidesidebar.toggleSidebar()">
+   <div class="hidden lg:flex mt-4 ml-3 gap-4 hover:opacity-60 cursor-pointer">
     <img src="../../../../assets/icon-hide-sidebar.svg" alt="" class="h-4">
-    <p class="text-sm font-bold -mt-1">Hide Sidebar</p>
+    <p class="text-sm font-bold  -mt-1">Hide Sidebar</p>
   </div>
+</button>
+ 
   </div>
