--- a/src/app/View/modals/add-board/add-board.component.html
+++ b/src/app/View/modals/add-board/add-board.component.html
@@ -1,1 +1,112 @@
-<p>add-board works!</p>
+<div
+  class="overflow-y-auto h-full fixed backdrop-blur-sm bg-black bg-opacity-20 top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 scroll-bar-hide"
+>
+  <div class="relative p-4 w-full ml-auto mr-auto mt-14 max-w-md max-h-full">
+    <!-- Modal content -->
+    <div class="relative bg-[#2b2c37] rounded-lg shadow dark:bg-gray-700">
+      <!-- Modal header -->
+      <div
+        class="flex items-center justify-between p-4 md:p-5 rounded-t dark:border-gray-600"
+      >
+        <h3 class="text-lg font-semibold text-white dark:text-white">
+          Add New Board
+        </h3>
+        <button
+          type="button"
+          class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white"
+          data-modal-toggle="add-modal"
+        >
+          <svg
+            class="w-3 h-3"
+            aria-hidden="true"
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 14 14"
+          >
+            <path
+              stroke="currentColor"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"
+            />
+          </svg>
+
+          <span class="sr-only">Close modal</span>
+        </button>
+      </div>
+      <!-- Modal body -->
+      <form class="p-4 md:p-5">
+        <div class="grid gap-4 mb-4 grid-cols-2">
+          <div class="col-span-2">
+            <label
+              for="name"
+              class="block mb-2 text-sm font-medium text-white dark:text-white"
+              >Name</label
+            >
+            <input
+              type="text"
+              name="name"
+              id="name"
+              class="bg-transparent text-white border-2 border-[#3e3f4e] text-sm rounded-lg focus:outline-none focus:ring-0 focus:border-[#635FC7] block w-full p-2.5 px-5"
+              required=""
+              formControlName="title"
+            />
+          </div>
+
+          <label
+                for="name"
+                class="block text-sm font-medium text-white dark:text-white"
+                >Columns</label
+              >
+          <div class="col-span-2 flex gap-4">
+            <div class="w-full">
+              <input
+                type="text"
+                name="name"
+                id="name"
+                class="bg-transparent text-white border-2 border-[#3e3f4e] text-sm rounded-lg focus:outline-none focus:ring-0 focus:border-[#635FC7] block w-full p-2.5 px-5"
+                required=""
+                formControlName="title"
+              />
+            </div>
+ 
+        
+            <svg
+              class="w-8 h-8  mt-2 text-gray-400 dark:text-white"
+              aria-hidden="true"
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+            >
+              <path
+                stroke="currentColor"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2.9"
+                d="M6 18 18 6m0 12L6 6"
+              />
+            </svg>
+          </div>
+
+        
+          <div class="col-span-2">
+            <button
+              class="text-[#635FC7] bg-white hover:bg-opacity-90 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-full w-full text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
+            >
+              Add New Column
+            </button>
+          </div>
+
+        </div>
+
+        <button
+          type="submit"
+          class="text-white bg-[#635FC7] hover:bg-indigo-400 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-full w-full text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
+        >
+          Create New Board
+        </button>
+      </form>
+    </div>
+  </div>
+</div>
