--- a/src/app/View/components/header/header.component.html
+++ b/src/app/View/components/header/header.component.html
@@ -21,6 +21,7 @@
     
     <div class="left-btn flex ml-auto gap-3 lg:gap-4">
       <button
+      (click)="modalToggleService.modalToggle('add-task')"
         class="add-btn flex p-2 lg:py-3 lg:rounded-full rounded-xl px-4 bg-[#635FC7] hover:opacity-60"
       >
         <img
