--- a/src/app/View/modals/add-task/add-task.component.html
+++ b/src/app/View/modals/add-task/add-task.component.html
@@ -13,6 +13,7 @@
         </h3>
         <button
           type="button"
+          (click)="modalToggleService.modalToggle('add-task')"
           class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white"
           data-modal-toggle="add-modal"
         >
@@ -53,40 +54,6 @@
               formControlName="title"
             />
           </div>
-          <!-- <div class="col-span-2 sm:col-span-1">
-            <label
-              for="price"
-              class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
-              >Price</label
-            >
-            <input
-              type="number"
-              name="price"
-              id="price"
-              class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
-              placeholder="$2999"
-              required=""
-              formControlName="price"
-            />
-          </div>
-          <div class="col-span-2 sm:col-span-1">
-            <label
-              for="category"
-              class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
-              >Category</label
-            >
-            <select
-              id="category"
-              class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
-              formControlName="category"
-            >
-              <option selected="">Select category</option>
-              <option value="TV">TV/Monitors</option>
-              <option value="PC">PC</option>
-              <option value="GA">Gaming/Console</option>
-              <option value="PH">Phones</option>
-            </select>
-          </div> -->
           <div class="col-span-2">
             <label
               for="description"
@@ -135,12 +102,10 @@
             </svg>
           </div>
 
-          <div class="col-span-2">
-            <button
-              class="text-[#635FC7] bg-white hover:bg-opacity-90 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-full w-full text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
-            >
-              Add New Subtask
-            </button>
+          <div
+            class="text-[#635FC7] cursor-pointer col-span-2 bg-white hover:bg-opacity-90 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-full w-full text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
+          >
+            Add New Subtask
           </div>
 
           <div class="col-span-2">
