feat/ edit board dropdown toggle

--- a/src/app/View/components/header/header.component.html
+++ b/src/app/View/components/header/header.component.html
@@ -35,7 +35,8 @@
       <img
         src="../../../../assets/icon-vertical-ellipsis.svg"
         alt=""
-        class="h-4 lg:h-5 lg:mt-4 mt-1.5"
+        class="h-4 lg:h-5 lg:mt-4 mt-1.5 cursor-pointer"
+        (click)="dropdowntoggleservice.dropdownToggle('edit-board')"
       />
     </div>
      </div>
