--- a/src/app/View/shareables/edit-board-btn/edit-board-btn.component.html
+++ b/src/app/View/shareables/edit-board-btn/edit-board-btn.component.html
@@ -1,1 +1,6 @@
-<p>edit-board-btn works!</p>
+<main  class="absolute right-8 z-40 top-20">
+    <ul class="bg-[#20212c] w-36 p-4 rounded-md shadow-lg ">
+        <li class="text-gray-400 cursor-pointer hover:opacity-55">Edit Board</li>
+        <li class="text-red-500 cursor-pointer mt-2 hover:opacity-55">Delete Board</li>
+    </ul>
+</main>
