--- a/src/app/View/shareables/task-dropdown/task-dropdown.component.html
+++ b/src/app/View/shareables/task-dropdown/task-dropdown.component.html
@@ -1,1 +1,7 @@
-<p>task-dropdown works!</p>
+<main  class="w-full">
+    <ul class="bg-[#20212c] w-full p-4 rounded-md shadow-lg ">
+        <li class="text-gray-400 cursor-pointer hover:opacity-55 hover:text-white hover:scale-105 duration-200">Todo</li>
+        <li class="text-gray-400 cursor-pointer hover:opacity-55 hover:text-white hover:scale-105 duration-200">Todo</li>
+        <li class="text-gray-400 cursor-pointer hover:opacity-55 hover:text-white hover:scale-105 duration-200">Todo</li>
+    </ul>
+</main>
