feat/ edit-board-dropdown

--- a/src/app/View/pages/home/home.component.html
+++ b/src/app/View/pages/home/home.component.html
@@ -6,7 +6,7 @@
   } @if(modalToggleService.isAddBoardShown){
   <app-add-board />
   } @if(dropdowntoggleservice.isEditBoardDropdownShown){
-  <app-edit-board-btn />
+  <app-edit-board-dropdown />
   }
 
   <app-dashboard-frame />
