--- a/src/app/View/modals/add-board/add-board.component.html
+++ b/src/app/View/modals/add-board/add-board.component.html
@@ -55,49 +55,9 @@
             />
           </div>
 
-          <label
-                for="name"
-                class="block text-sm font-medium text-white dark:text-white"
-                >Columns</label
-              >
-          <div class="col-span-2 flex gap-4">
-            <div class="w-full">
-              <input
-                type="text"
-                name="name"
-                id="name"
-                class="bg-transparent text-white border-2 border-[#3e3f4e] text-sm rounded-lg focus:outline-none focus:ring-0 focus:border-[#635FC7] block w-full p-2.5 px-5"
-                required=""
-                formControlName="title"
-              />
-            </div>
- 
-        
-            <svg
-              class="w-8 h-8  mt-2 text-gray-400 dark:text-white"
-              aria-hidden="true"
-              xmlns="http://www.w3.org/2000/svg"
-              fill="none"
-              viewBox="0 0 24 24"
-            >
-              <path
-                stroke="currentColor"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                stroke-width="2.9"
-                d="M6 18 18 6m0 12L6 6"
-              />
-            </svg>
-          </div>
-
-        
-          <div class="col-span-2">
-            <button
-              class="text-[#635FC7] bg-white hover:bg-opacity-90 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-full w-full text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
-            >
-              Add New Column
-            </button>
-          </div>
+          <div class="col-span-2 ">
+            <app-multi-input-box [label]="'Columns'" [buttonName]="'Add Column'"/>
+             </div>
 
         </div>
 
