feat/ multi-input-box limit error handling with sweet alert

--- a/src/app/View/modals/add-task/add-task.component.html
+++ b/src/app/View/modals/add-task/add-task.component.html
@@ -69,7 +69,7 @@
           </div>
 
           <div class="col-span-2 ">
-         <app-multi-input-box [label]="'Subtasks'" [buttonName]="'Add Subtask'"/>
+         <app-multi-input-box [label]="'Subtasks'" [buttonName]="'Add Subtask'" [isDeleteSvgShown]="true"/>
           </div>
 
           <div class="col-span-2">
