feat/new column

--- a/src/app/View/pages/home/home.component.html
+++ b/src/app/View/pages/home/home.component.html
@@ -10,4 +10,27 @@
   }
 
   <app-dashboard-frame />
+
+  <div class="main flex lg:gap-80 ">
+
+    <div class="side-bar">
+        <app-sidebar [ngClass]="{ invisible: showSidebarService.isSidebarShown }" />
+
+  <app-show-sidebar
+    (click)="showSidebarService.toggleSidebar()"
+    [ngClass]="{ 'invisible ': !showSidebarService.isSidebarShown }"
+  />
+    </div>
+
+    <div class="columns overflow-y-auto z-20 mt-32 ml-6">
+ <app-new-column/>
+    </div>
+   
+
+  </div>
+
+ 
+ 
+
+ 
 </main>
