feat/ new column and edit board modal toggle

--- a/src/app/View/components/create-new-board/create-new-board.component.html
+++ b/src/app/View/components/create-new-board/create-new-board.component.html
@@ -13,7 +13,7 @@ class="flex gap-4 p-3 cursor-pointer pl-7 w-[280px] hover:opacity-60 hover:text-
   />
 </svg>
 
-<button class="flex gap-1" (click)="modalToggleService.modalToggle('add-board')">
+<button class="flex gap-1" (click)="modalToggleService.modalToggle('add-board', '')">
   <svg
     width="8"
     height="19"
