--- a/src/app/View/components/header/header.component.html
+++ b/src/app/View/components/header/header.component.html
@@ -21,7 +21,7 @@
     
     <div class="left-btn flex ml-auto gap-3 lg:gap-4">
       <button
-      (click)="modalToggleService.modalToggle('add-task')"
+      (click)="modalToggleService.modalToggle('add-task', '')"
         class="add-btn flex p-2 lg:py-3 lg:rounded-full rounded-xl px-4 bg-[#635FC7] hover:opacity-60"
       >
         <img
@@ -32,12 +32,15 @@
         <p class="text-white text-sm hidden lg:block font-bold">Add New Task</p>
       </button>
 
-      <img
+      <button  (click)="dropdowntoggleservice.dropdownToggle('edit-board')" class="add-btn flex items-center border-transparent hover:bg-[#20212c]  p-1 lg:rounded-full rounded-xl px-2 hover:opacity-60">
+         <img
         src="../../../../assets/icon-vertical-ellipsis.svg"
         alt=""
-        class="h-4 lg:h-5 lg:mt-4 mt-1.5 cursor-pointer"
-        (click)="dropdowntoggleservice.dropdownToggle('edit-board')"
+        class="h-4 lg:h-5 cursor-pointer"
       />
+      </button>
+
+     
     </div>
      </div>
   </div>
