--- a/src/app/View/modals/add-column/add-column.component.html
+++ b/src/app/View/modals/add-column/add-column.component.html
@@ -9,9 +9,10 @@
         class="flex items-center justify-between p-4 md:p-5 rounded-t dark:border-gray-600"
       >
         <h3 class="text-lg font-semibold text-white dark:text-white">
-          Add New Column
+          {{formTitle}}
         </h3>
         <button
+        (click)="modalToggleService.modalToggle('add-column', 'Add Column')"
           type="button"
           class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white"
           data-modal-toggle="add-modal"
