feat/ scrollbar customization

--- a/src/app/View/components/header/header.component.html
+++ b/src/app/View/components/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="header fixed z-10 w-full p-9 bg-[#2b2c37]  lg:px-8 lg:p-0 flex border-b-[1px] border-b-[#3e3f4e] divide-x-[1.5px] divide-[#3e3f4e]">
+<div class="header fixed z-30 w-full p-9 bg-[#2b2c37]  lg:px-8 lg:p-0 flex border-b-[1px] border-b-[#3e3f4e] divide-x-[1.5px] divide-[#3e3f4e]">
     <img src="../../../../assets/logo-mobile.svg" alt="" class="lg:hidden" />
     <img
       src="../../../../assets/logo-light.svg"
@@ -6,7 +6,7 @@
       class="hidden lg:block h-6 mr-0 pr-32 mt-8 mb-5"
     />
 
-    <div class="launch pl-8 flex w-full lg:pt-8 lg:pb-5 lg:non-cl">
+    <div class="launch pl-8 flex w-full lg:pt-8 lg:pb-5">
         <div class="drop-down ml-5 lg:ml-0 cursor-pointer lg:cursor-text"  (click)="isSmallScreen && showsidebar.toggleSidebar()">
       <div class="drop-head flex" >
         <p class="text-white font-bold lg:text-2xl text-xl">Platform Launch</p>
