--- a/src/app/View/components/show-sidebar/show-sidebar.component.html
+++ b/src/app/View/components/show-sidebar/show-sidebar.component.html
@@ -1,3 +1,5 @@
-<main class="absolute hidden lg:block  p-5 px-6 bg-[#635FC7] bottom-8 rounded-tr-full rounded-br-full cursor-pointer">
-    <img src="../../../../assets/icon-show-sidebar.svg" alt="">
+<main
+  class="fixed hidden lg:block p-5 px-6 bg-[#635FC7] bottom-8 rounded-tr-full rounded-br-full cursor-pointer"
+>
+  <img src="../../../../assets/icon-show-sidebar.svg" alt="" />
 </main>
