--- a/src/app/View/pages/home/home.component.html
+++ b/src/app/View/pages/home/home.component.html
@@ -10,12 +10,13 @@
   }
 
   <app-dashboard-frame />
-
-  <div class="main overflow-x-auto w-[140vw] flex lg:gap-80">
-    <div class="side-bar">
-      <app-sidebar
+ <app-sidebar
         [ngClass]="{ invisible: showSidebarService.isSidebarShown }"
       />
+      
+  <div class="main scroll-m-2  overflow-x-auto w-[140vw] flex lg:gap-80">
+    <div class="side-bar">
+     
 
       <app-show-sidebar
         (click)="showSidebarService.toggleSidebar()"
@@ -23,7 +24,7 @@
       />
     </div>
 
-    <div class="columns z-20 mt-32 ml-6">
+    <div class="columns mt-32 ml-6">
       <app-new-column />
     </div>
   </div>
