--- a/src/app/View/shareables/edit-board-dropdown/edit-board-dropdown.component.html
+++ b/src/app/View/shareables/edit-board-dropdown/edit-board-dropdown.component.html
@@ -1,4 +1,4 @@
-<main  class="absolute right-8 z-40 top-[85px]">
+<main  class="fixed right-8 z-40 mt-[85px]">
     <ul class="bg-[#20212c] w-48 p-4 rounded-md shadow-lg ">
         <li (click)="modalToggleService.modalToggle('add-column', 'Edit Board')" class="text-gray-400 cursor-pointer hover:opacity-55">Edit Board</li>
         <li class="text-red-500 cursor-pointer mt-2 hover:opacity-55">Delete Board</li>
