--- a/src/styles.css
+++ b/src/styles.css
@@ -8,6 +8,11 @@
   font-family: "Plus Jakarta Sans", sans-serif;
 }
 
+html, body {
+  margin: 0;
+  padding: 0;
+}
+
 body{
     background: #20212c;
 }
@@ -29,4 +34,18 @@ body{
 
 .light {
   background: #f4f7fd;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #3e3f4e;
+  border-radius: 400px; 
+}
+
+::-webkit-scrollbar-track {
+  background-color: rgb(22, 22, 22); 
+}
+
+::-webkit-scrollbar {
+  width: 11px;
+  height: 8px;
 }
