feat/ column template

--- a/src/app/View/pages/home/home.component.html
+++ b/src/app/View/pages/home/home.component.html
@@ -23,8 +23,9 @@
     </div>
 
     <div class="columns flex gap-7 mt-32 ml-3">
+      <app-column/>
       <app-new-column />
-      <app-task-card/>
+      
     </div>
   </div>
 </main>
