--- a/src/app/View/pages/home/home.component.html
+++ b/src/app/View/pages/home/home.component.html
@@ -1,4 +1,4 @@
-<main class="">
+<!-- <main class="">
   @if(modalToggleService.isAddTaskModalShown){
   <app-add-task />
   } @if(modalToggleService.isAddColumnModalShown){
@@ -28,4 +28,6 @@
       
     </div>
   </div>
-</main>
+</main> -->
+
+<app-task-details/>
