--- a/src/app/View/shareables/task-dropdown/task-dropdown.component.html
+++ b/src/app/View/shareables/task-dropdown/task-dropdown.component.html
@@ -1,7 +1,35 @@
-<main  class="w-full">
-    <ul class="bg-[#20212c] w-full p-4 rounded-md shadow-lg ">
-        <li class="text-gray-400 cursor-pointer hover:text-white hover:scale-105 duration-200">Todo</li>
-        <li class="text-gray-400 cursor-pointer  hover:text-white hover:scale-105 duration-200">Todo</li>
-        <li class="text-gray-400 cursor-pointer  hover:text-white hover:scale-105 duration-200">Todo</li>
+<div class="col-span-2 mt-4">
+  <label
+    for="name"
+    class="block mb-2 text-sm font-medium text-white dark:text-white"
+    >{{label}}</label
+  >
+  <div
+    (click)="dropdownToggleService.dropdownToggle('status')"
+    class="bg-transparent cursor-pointer text-white border-2 border-[#3e3f4e] text-sm rounded-lg focus:outline-none focus:ring-0 focus:border-[#635FC7] block w-full p-2.5 px-5"
+  >
+    Todo
+  </div>
+
+  @if(dropdownToggleService.isStatusDropdownShown){
+  <div class="w-full">
+    <ul class="bg-[#20212c] w-full p-4 rounded-md shadow-lg">
+      <li
+        class="text-gray-400 cursor-pointer hover:text-white hover:scale-105 duration-200"
+      >
+        Todo
+      </li>
+      <li
+        class="text-gray-400 cursor-pointer hover:text-white hover:scale-105 duration-200"
+      >
+        Todo
+      </li>
+      <li
+        class="text-gray-400 cursor-pointer hover:text-white hover:scale-105 duration-200"
+      >
+        Todo
+      </li>
     </ul>
-</main>
+  </div>
+  }
+</div>
