feat/ 26 test cases passed

--- a/src/app/View/modals/add-task/add-task.component.html
+++ b/src/app/View/modals/add-task/add-task.component.html
@@ -76,7 +76,7 @@
             />
           </div>
 
-          <app-task-dropdown [label]="'Status'"/>
+          <app-task-dropdown [label]="'Status'" class="col-span-2"/>
         </div>
 
         <button
