--- a/src/app/View/modals/add-task/add-task.component.html
+++ b/src/app/View/modals/add-task/add-task.component.html
@@ -3,7 +3,7 @@
 >
   <div class="relative p-4 w-full ml-auto mr-auto mt-14 max-w-md max-h-full">
     <!-- Modal content -->
-    <div class="relative bg-[#2b2c37] rounded-lg shadow dark:bg-gray-700">
+    <div class="relative bg-dark-secondary rounded-lg shadow dark:bg-gray-700">
       <!-- Modal header -->
       <div
         class="flex items-center justify-between p-4 md:p-5 rounded-t dark:border-gray-600"
@@ -76,7 +76,7 @@
             />
           </div>
 
-          <app-task-dropdown [label]="'Status'" class="col-span-2"/>
+          <app-task-dropdown [label]="'Status'" class="col-span-2" />
         </div>
 
         <button
